# code_rag

./: .gitignore  docker-compose.yml  pyproject.toml  test_questions_en.md
notebooks/: nb01_corpus_discovery.ipynb  nb01_exploration_generale.ipynb  nb02_stratification_and_chunking.ipynb  nb03_rag_comparison.ipynb  nb04_chunking_strategy_retrieval_eval.ipynb  nb05_code_rag_exploration.ipynb  nb06_bm25_retrieval_eval.ipynb  nb07_hybrid_final_rag_benchmark.ipynb
notebooks/rag-from-scratch-main/: rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb
src/: ask_ollama_rag.py  chunk_md.py  embed_chunks.py  ingest_chunks_to_qdrant.py  query_qdrant.py
src/chunkers/: chunk_md.py
