[project]
name = "code-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "langchain-core>=1.2.19",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
